fix(material/list): use direction-agnostic text-align
Avoids some extra styles by using `text-align: start` instead of having to flip it manually for RTL.

--- a/src/material/list/list.scss
+++ b/src/material/list/list.scss
@@ -186,11 +186,7 @@ mat-action-list button {
   font: inherit;
   outline: inherit;
   -webkit-tap-highlight-color: transparent;
-  text-align: left;
-
-  [dir='rtl'] & {
-    text-align: right;
-  }
+  text-align: start;
 
   &::-moz-focus-inner {
     border: 0;
